Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
         <a href="http://www.sedonamonthly.com" target="_blank"><img src="images/sedona-logo.png" alt="Sedona Monthly logo"></a>
         <a href="http://www.bergdorfgoodman.com/" target="_blank"><img src="images/bergdorf-logo.png" alt="Bergdorf Goodman logo"></a>
       </section>
-      <div id="copyright">
+      <footer>
         <p>&copy; 2014 Zetsy, All Rights Reserved.</p>
-      </div>
+      </footer>
     </div> <!-- wrapper -->
   </body>
 </html>
