--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- your code here! -->
 
       <header>
-        <h1><a href="#">Zetsy</a></h1>
+        <h1><a id="head" href="#">Zetsy</a></h1>
 
       </header>
 
